[package]
name = "worker"
version = "2.0.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json", "offline" ] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0.163"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["full"] }
redis = { version = "0.23.0", features = ["tokio-comp", "aio"] }
async-trait = "0.1.68"
amqprs = { version = "1.4.0", features = ["urispec", "tokio-rustls"] }
queues = "1.1.0"
chrono = { version = "0.4.26", features = ["serde"] }
megalodon = "0.8.5"
url = "2.4.0"
regex = "1.8.4"
reqwest = "0.11.18"
webfinger = { version = "0.5.1", features = ["async", "async-trait"] }
