[package]
name = "worker"
version = "2.0.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
async-std = { version = "1.12.0", features = ["attributes"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "json", "offline" ] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"

